# cockpit

./: .gitignore  package.json  tsconfig.json
pkg/lib/: cockpit.js  python.js  serverTime.js  service.js  superuser.js  timeformat.js
pkg/metrics/: metrics.jsx
pkg/users/: users.js
src/bridge/: Makefile.am  cockpitquackchannel.c  cockpitquackchannel.h
src/rust/: Cargo.toml  README.md  rust.h
src/rust/src/: lib.rs
src/systemd/: update-motd
src/ws/: cockpitbranding.c
src/ws-rs/: Cargo.toml
src/ws-rs/src/: cli.rs  cockpit_branding.rs  cockpit_bridge.rs  constants.rs  main.rs  message.rs  os_release.rs  server.rs  state.rs
test/: vm.install
test/common/: packagelib.py  testlib.py
test/verify/: check-connection  check-kdump  check-loopback  check-metrics  check-networkmanager-firewall  check-packagekit  check-pages  check-reauthorize  check-session  check-shell-host-switching  check-shell-multi-machine  check-shell-multi-machine-key  check-sosreport  check-static-login  check-storage-anaconda  check-storage-stratis  check-superuser  check-system-info  check-system-realms  check-users
tools/: cockpit.spec  cockpit.suse.pam
types/: cockpit-global.d.ts  cockpit.d.ts  notifications.d.ts  python.d.ts  serverTime.d.ts  service.d.ts  superuser.d.ts
