[package]
name = "ws-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6.2"
actix-web-actors = "4.2.0"
actix = "0.13.0"
env_logger = "0.10.0"
log = "0.4.17"
serde = "1.0.162"
serde_json = "1.0.96"
clap = { version = "4.2.7", features = ["derive"] }
